CMakeLists.txt: add cmake build option
Signed-off-by: Junbo Zheng <zhengjunbo1@xiaomi.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,13 @@
-cmake_minimum_required( VERSION 3.10 )
+cmake_minimum_required(VERSION 3.10)
 
-project( net_io LANGUAGES C )
+project(net_io LANGUAGES C)
 
-add_executable( client client.c )
-add_executable( select select.c )
-add_executable( epoll epoll.c )
-add_executable( poll poll.c )
+add_compile_options(-Wall -Wextra -Werror -Wno-format -g)
+
+add_executable(client client.c)
+
+add_executable(select select.c)
+
+add_executable(epoll epoll.c)
+
+add_executable(poll poll.c)
